--- a/source/localizable/faq.html.erb
+++ b/source/localizable/faq.html.erb
@@ -3,20 +3,58 @@
 <div class="container">
   <section class="subpage">
     <h2>FAQ</h2>
-    <h3 class="faq__question">Wer steht hinter diesem Projekt?</h3>
-    <p>Der Covid-19-Tracker wurde ursprünglich von mehreren unabhängigen Forschern und Software-Entwicklern im Austausch mit der Gesundheitsdirektion des Kantons Bern realisiert.
-    Er wird nun von einem Konsortium, welches die ETH Zürich und die Gesundheitsdirektion des Kantons Bern einschliesst, geleitet.
-    </p>
+    <h3 class="faq__question">Warum haben Sie diese Umfrage durchgeführt, was hilft das?</h3>
+    <p>Da sich die COVID-19-Pandemie auf der ganzen Welt ausgebreitet hat, hat sich gezeigt, dass Tests für die Verlangsamung der Verbreitung in der Gemeinschaft unerlässlich sind, wie dies in Südkorea und in der italienischen Region,Vò, beobachtet wurde. Eine nicht gezielte Längsschnittuntersuchung einer großen Population ist derzeit jedoch nicht möglich. In der Schweiz beschränken sich diagnostische Tests derzeit nur auf schwere Fälle. Wir möchten traditionelle diagnostische Tests durch eine kurze und anonyme Umfrage ergänzen. Diese Umfrage wird es uns ermöglichen, die Ausbreitung symptomatischer Personen im ganzen Land in Längsrichtung zu verfolgen und möglicherweise Hinweise darauf zu geben, wie viele symptomatische Personen derzeit existieren und wo es wahrscheinlich zu einer starken Zunahme oder lokalen Häufung von Fällen kommt. Wir planen, zusammenfassende Statistiken zu veröffentlichen, um die Öffentlichkeit aufzuklären und eine klare Motivation für die Ausübung körperlicher Distanzierung zu geben und den Kanton Bern und andere interessierte Regierungsstellen über die Symptomdynamik in ihren Gemeinden zu informieren.</p>
+    
     <h3 class="faq__question">Was ist das Ziel der Kampagne?</h3>
-    <p>Ziel des Covid-19-Trackers ist es, in kurzer Zeit möglichst viele Daten von gesunden und infizierten Personen in der Schweiz zusammentragen. Diese Daten sollen unter anderem dazu dienen, ein differenziertes Bild der Corona-Situation zu erhalten.</p>
-    <p> <%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %> </p>
-    <h3 class="faq__question">Wie hilft das Sammeln der Daten bei der Bekämpfung der Corona-Krise?</h3>
-    <p>Die Informationen zur Corona-Situation in der Schweiz sind schwer zu koordinieren und schwer zusammenzutragen. Flächendeckende Tests sind keine Option. Jedes zusätzliche Stück Information kann daher helfen, die Ausbreitung des Virus zu stoppen.<br>Die mittels Covid-19-Tracker gesammelten Daten enthalten die Postleitzahl sowie eine Selbsteinschätzung der antwortenden Personen. Regionen, in denen besonders viele potenzielle Krankheitsfälle vorkommen, können so erkannt werden. Dies ermöglicht gezielte Massnahmen seitens der Behörden.</p>
-    <h3 class="faq__question">Ist die Kampagne wissenschaftlich abgestützt?</h3>
-    <p>Der aktuelle Fragebogen der Studie wurde von der ETH Zürich entwickelt. Auch die Gesundheitsdirektion des Kantons Bern bestätigt das dringende Bedürfnis nach möglichst umfassenden Informationen aus der Bevölkerung, um die Epidemie zu bekämpfen. Wissenschaftliche Untersuchungen (u.a. von Dr. Jan von Overbeck) stützen ein Vorgehen, wie es mit dem Covid-19-Tracker nun umgesetzt wird.</p>
-    <h3 class="faq__question">Was geschieht mit meinen Daten?</h3>
-    <p>Die Daten, die mittels Covid-19-Tracker gesammelt werden, erlauben keine Rückschlüsse auf Personen. Sie enthalten Postleitzahl, Alter, Geschlecht und einige weitere Informationen, jedoch weder Namen, noch sonstige personenbezogenen Daten.</p>
-    <h3 class="faq__question">Werden die Daten nicht verfälscht, wenn beispielsweise in vernetzten Gebieten wie Städten mehr Personen den Fragebogen ausfüllen?</h3>
-    <p>Dieser geografische Bias kann korrigiert werden indem auch gesunde Personen den Fragebogen ausfüllen. Die Anzahl infizierter Personen kann so durch die Grundgesamtheit dividiert werden. Die resultierende Prozent- oder Promillezahl hat eine höhere Aussagekraft.</p>
+    <p>Ziel des COVID-19-Trackers ist es, durch Stichproben in der Schweizer Bevölkerung schnellstmöglich viele Daten an möglichst vielen Tagen zu sammeln, unabhängig davon, ob die Personen krank sind oder nicht. Diese Daten sollen unter anderem dazu dienen, ein differenziertes Bild der Corona-Situation in verschiedenen Teilen unseres Landes zu erhalten (siehe vorherige Frage).</p>
+    
+    <h3 class="faq__question">Warum muss ich die Umfrage jeden Tag oder zumindest häufig ausfüllen?</h3>
+    <p>Um zu verstehen, wie sich die Symptome in einem bestimmten Bereich entwickeln, ist es wichtig zu sehen, wie sich die einzelnen Befragten im Laufe der Zeit verändern. Das einmalige Ausfüllen der Umfrage ist ein wichtiger Datenpunkt, aber das Aggregieren von Datenpunkten über einen längeren Zeitraum ist wertvoller, um Änderungen in den Bezirken und Ihrer Stadt zu identifizieren.</p>
+    
+    <h3 class="faq__question">Soll ich die Umfrage beantworten, auch wenn ich keine Symptome habe?</h3>
+    <p>Ja! Wir interessieren uns für die Veränderungen in der Gesundheit der Menschen, daher ist es wichtig, zu wissen, dass Sie sich gestern gut gefühlt haben, aber heute Fieber haben. Wählen Sie einfach "Keine Symptome" und  machen Sie weiter, es sei denn,  die Situation ändert sich.</p>
+
+   
+    <h3 class="faq__question">Ich habe andere COVID-19-Umfragen ausgefüllt oder ähnliche Apps verwendet. Soll ich auch Ihre Umfrage ausfüllen?</h3>
+    <p>Ja, bitte füllen Sie unsere Umfrage aus wie auch die Anderen, wenn Sie bereits damit begonnen haben. Bitte lesen Sie auch die nächste Frage, um Einzelheiten darüber zu erfahren, was unternommen wird, um sich mit anderen Initiativen zusammenzuschließen.</p>
+    
+   
+    <h3 class="faq__question">Warum gibt es viele Möglichkeiten zur Symptomverfolgung?</h3>
+    <p>Es ist nicht ungewöhnlich, dass  in schwierigen und dringenden Zeiten  mehrere Projekte parallel beginnen. Unser multidisziplinäres Team hat mehrere Wochen fleißig gearbeitet, um sicherzustellen, dass unsere Umfrage sowohl für Ärzte als auch für Epidemiologen informativ ist und die hohen ethischen und rechtlichen Standards erfüllt, die erfüllt sein müssen, um sicher Daten über die Gesundheit der Schweizer Bevölkerung zu sammeln . Wir haben die Zusammenarbeit und Unterstützung des Kantons Bern und der ETHZ sichergestellt und koordinieren miteinander die Bemühungen, durch die derzeit verfügbaren Optionen zur Symptomverfolgung einen gemeinsamen Datenstrom zu bilden.</p>
+    
+    <h3 class="faq__question">Wer steht hinter diesem Projekt?</h3>
+    <p>Wir sind eine Gruppe von Akademikern, unabhängigen Forschern, Softwareentwicklern, Biologen und Ärzten, die in Zusammenarbeit mit dem Gesundheitsamt des Kantons Bern zusammenarbeiten, um unserer Gemeinde eine notwendige Bedienung zu bieten. <br />
+        <ul>
+        <li>ETH Zürich: Biomedizinische Informatik Gruppe, Departement Informatik <a href="https://bmi.inf.ethz.ch/">https://bmi.inf.ethz.ch/</a> </li>
+        <li>Milliways: Wir finden pragmatische Lösungen für nahezu jedes IT Problem </li>
+        <li>Nine:Dank Kubernetes Cluster müssen wir uns keine Sorgen um die Skalierbarkeit des Backends machen </li>
+        <li>Astina: Lieferant von Backend und Datenverarbeitungssoftwarelösungen aus Zürich </li>
+        <li>Esri: Pioniere im Einsatz von GIS. Wir sind Vorreiter bei der Problemlösung und Visualisierung mit der Software Geographic Information System, damit Sie sehen können, was andere nicht können</li>
+        <li>Canton of Bern: Dr. med. Jan von Overbeck, Spezialist für medizinische Verbindung und Infektionskrankheiten </li>
+        </ul>
+
+    </p>
+  
+  
+    <h3 class="faq__question">Sind Ärzte beteiligt? ist diese Anstrengung wissenschaftlich unterstützt?</h3>
+    <p>Die Umfrage wurde in enger Zusammenarbeit und mit ständigem Feedback von Ärzten relevanter Fachgebiete (wie Epidemiologie, Intensivmedizin und Infektologie) sowie führenden epidemiologischen Wissenschaftlern und Behörden des Kantons Bern entwickelt. Besonders dankbar sind wir Dr. med. Jan von Overbeck, Dr. med. Tobias Merz, Dr. med. Martin Faltys, Dr. Christian Althaus, Dr. Marcel Salathé und vielen Anderen aus einem großartigen Team von Unterstützern.</p>
+  
+    <h3 class="faq__question">Warum nur Symptome? Einige Symptome können sich auch auf Grippe oder Erkältung beziehen... usw</h3>
+    <p>Diese Umfrage ist nicht als COVID-19-Diagnosetool gedacht, und die Teilnahme daran schließt einen Diagnosetest bei Bedarf nicht aus. Unser Ziel ist es, die Anzahl der symptomatischen Personen und die Prävalenz der Symptome zu schätzen, die in früheren Studien (<a href="https://www.medrxiv.org/content/10.1101/2020.03.19.20038844v2">wie dieser</a>) mit den gemeldeten positiven COVID-19-Tests korreliert wurden. Wir hoffen, dass dies der Öffentlichkeit und Experten einen Einblick gibt, wo COVID-19 derzeit wahrscheinlich am häufigsten auftritt, und helfen kann, vorherzusagen, wo sich neue Cluster entwickeln könnten.
+  
+    <h3 class="faq__question"> Wo werden die Daten gespeichert? Sind meine Daten sicher?</h3>
+    <p>Alle Daten werden anonym erhoben und sicher in der Schweiz gespeichert. Wir haben geeignete Maßnahmen ergriffen, um den Zugang der Öffentlichkeit zu den Rohdaten zu verhindern. In Übereinstimmung mit unserer Ethik-Freigabe werden Daten nur in aggregierter Form veröffentlicht, ohne dass eine einzelne Person herausgegriffen werden kann. Wir sammeln weder Namen noch andere Formen personenbezogener Daten. Die gesamte Datenübertragung erfolgt verschlüsselt.
+    </p>
+  
+    <h3 class="faq__question">Was machen Sie mit den Daten?</h3>
+    <p>Kurzfristig werden die Daten epidemiologischen Forschern und Behörden zur Verfügung stehen, um die Dynamik der Verbreitung von COVID-19 in der Schweiz besser einschätzen zu können, und sie werden verwendet, um informative Visualisierungen für die breite Öffentlichkeit bereitzustellen, siehe beispielsweise <a href="https://www.covidtracker.ch/it/map.html">unsere Karte</a>. Während die Daten nicht zur Diagnose einer Person verwendet werden können, zeigen die über lokale Bereiche und Zeiträume aggregierten Datenpunkte, die Hauptansammlungen aufkommender Symptome und ermöglichen eine rechtzeitige Reaktion. Langfristig wird der vollständige Datensatz eine wertvolle Ressource für die Forschung sein, um besser zu verstehen, wie sich Krankheiten wie COVID-19 ausbreiten, und um zu informieren, wie gut Maßnahmen zur Schadensbegrenzung funktionieren.</p>
+
+    
+    <h3 class="faq__question">Könnten die Daten verzerrt sein? Wenn zum Beispiel mehr Menschen den Fragebogen in Gebieten wie Städten oder anderen dicht besiedelten Gebieten ausfüllen?</h3>
+    <p>Ja, diese Art der Datenerfassung weist inhärente Verzerrungen und Einschränkungen auf. Aber viele Verzerrungen können jedoch korrigiert werden, wenn eine breite Beteiligung erreicht wird, und wenn viele Personen teilnehmen, können Beobachtungen sehr genau sein. Zum Beispiel kann die geografische Verzerrung korrigiert werden, indem die Anzahl der Verdachtsfälle durch die Gesamtzahl der eingereichten Fälle in dem interessierenden Bereich dividiert wird, wodurch der resultierende Prozentsatz der Symptome pro Postleitzahl im Kontext anderer Postleitzahlen oder Regionen in der Schweiz aussagekräftiger wird.</p>
+
+    
+  
   </section>
 </div>
