--- a/source/localizable/faq.it.html.erb
+++ b/source/localizable/faq.it.html.erb
@@ -3,18 +3,52 @@
 <div class="container">
   <section class="subpage">
     <h2>FAQ</h2>
-    <h3 class="faq__question">Chi c’è dietro questo progetto?</h3>
-    <p>Il tracciamento del Covid-19 è stato implementato da diversi ricercatori e sviluppatori di software indipendenti, con il sostegno del Dipartimento della sanità del Canton Berna.</p>
-    <h3 class="faq__question">Qual è l’obiettivo della campagna?</h3>
-    <p>L’obiettivo del tracciamento del Covid-19 è quello di raccogliere in Svizzera, in tempi brevi, il maggior numero possibile di dati sulle persone sane e sulle persone positive al coronavirus. Tali dati dovrebbero essere finalizzati, tra l’altro, a ottenere un quadro differenziato della situazione del coronavirus.</p>
-    <p> <%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %> </p>
-    <h3 class="faq__question">In che modo la raccolta dei dati contribuirà a combattere la crisi del coronavirus?</h3>
-    <p>In Svizzera, le informazioni sulla situazione del coronavirus sono difficili da coordinare e difficili da raccogliere. L’esecuzione di test a tappeto non è un’alternativa valida. Qualsiasi informazione aggiuntiva può dunque contribuire ad arrestare la diffusione del virus.<br>I dati raccolti dal tracciamento del Covid-19 contemplano il numero postale di avviamento, nonché un’autovalutazione da parte degli intervistati. Sarà così possibile identificare le regioni con un numero particolarmente elevato di potenziali casi di malattia. Questo consentirà alle autorità di attuare delle misure mirate e locali.</p>
-    <h3 class="faq__question">Questa campagna ha un fondamento scientifico?</h3>
-    <p>La campagna è stata sviluppata in collaborazione con il sostegno del Dipartimento della sanità del Canton Berna. Entrambe le istituzioni attestano l’urgente necessità di ricevere quante più informazioni possibili dalla popolazione per poter combattere l’epidemia. Esistono degli studi scientifici (compresi quelli del dottor Jan von Overbeck), che supportano una procedura come quella attualmente in corso di implementazione con il tracciamento del Covid-19.</p>
-    <h3 class="faq__question">Che ne sarà dei miei dati?</h3>
-    <p>I dati raccolti attraverso il tracciamento del Covid-19 non consentono di trarre conclusioni sull’identità delle persone. I dati contemplano il numero postale di avviamento, l’età, il sesso e altre informazioni, senza che siano riportati nomi, né altri dati personali.<br>I dati vengono salvati su server svizzeri.</p>
-    <h3 class="faq__question">Non si verifica l’alterazione dei dati se, ad esempio, il questionario viene compilato da più persone in aree collegate in rete, come le città?</h3>
-    <p>Per poter correggere questo bias geografico è necessario che il questionario sia compilato anche dalle persone sane. Il numero di persone infette può così essere suddiviso sull’intera popolazione. La cifra percentuale o per mille che ne risulta è più significativa.</p>
+    <h3 class="faq__question">Perché avete creato questo questionario, a cosa serve?</h3>
+    <p>Con la diffusione della pandemia di COVID-19 in tutto il mondo, è diventato chiaro che i test diagnostici sono essenziali per rallentare la diffusione nella società, come è stato visto in Corea del Sud e a Vò Euganeo in Italia. Tuttavia, non è al momento possibile effettuare test diagnostici su un’intera popolazione molto numerosa. Al momento in Svizzera i test diagnostici sono limitati ai casi più gravi. Vogliamo supportare i test diagnostici tradizionali attraverso un breve questionario anonimo. Questo questionario ci consentirà di tracciare la distribuzione di persone sintomatiche attraverso l’intera nazione, e possibilmente di individuare quante persone sintomatiche esistono al momento, e dove è possibile aspettarsi un grosso aumento di casi o gruppi isolati di casi. L'obiettivo è di divulgare un riassunto dei dati statistici ottenuti per informare il pubblico e dare una chiara motivazione alla pratica del distanziamento sociale, e di informare il Cantone di Berna e altri enti pubblici sulla dinamica dei sintomi nella popolazione. </p>
+    <h3 class="faq__question">Qual’è lo scopo di questa campagna?</h3>
+    <p>Lo scopo di COVID-19 tracker è di accumulare più rapidamente e per quanti giorni possibile dati ottenuti da un campione della popolazione Svizzera, indipendentemente dal fatto che i partecipanti manifestino sintomi o no. Inoltre, questi dati possono dare una visione più dettagliata sulla distribuzione del virus in diverse parti del paese (vedi domanda precedente).</p>
+    
+    <h3 class="faq__question">Perché è necessario compilare il questionario ogni giorno o almeno frequentemente?</h3>
+    <p>Per capire come i sintomi si evolvano in un’area specifica, è importante osservare come le risposte di ogni partecipante cambino nel tempo. Compilare il questionario una volta sola produce dati importanti, ma combinare dati ottenuti in tempi diversi consente di identificare cambiamenti nella vostra area o nella vostra città.</p>
+    
+    <h3 class="faq__question">Devo compilare il questionario anche se non ho sintomi?</h3>
+    <p>Sì! Siamo interessati nei cambiamenti dello stato di salute di una persona, quindi sapere che ieri stavi bene ma oggi hai un po’ di febbre è un’informazione importante. Puoi semplicemente selezionare la risposta “nessun sintomo” e continuare così a meno che la situazione cambi.</p>
+
+   
+    <h3 class="faq__question">Sto partecipando/ho partecipato ad altri questionari su COVID-19, o sto utilizzando app simili. Devo rispondere anche al vostro questionario?</h3>
+    <p>Sì, per favore rispondi al nostro e continua a rispondere agli altri a cui stai partecipando. Il prossimo punto riguarda ciò che stiamo facendo unitamente ad altre iniziative.</p>
+    
+   
+    <h3 class="faq__question">Perché ci sono diverse possibilità per il tracciamento dei sintomi?</h3>
+    <p>Non è insolito in un periodo di grande emergenza sanitaria che diversi progetti vengano lanciati in parallelo. Il nostro team multidisciplinare ha lavorato duro per diverse settimane per assicurarsi che il nostro questionario sia utile sia per i medici che per gli epidemiologi, e che mantenga gli standard etici e legali più rigorosi che devono essere rispettati per raccogliere e proteggere informazioni sulla salute della popolazione Svizzera. Abbiamo stabilito una collaborazione tra il Cantone di Berna e l’ETHZ, e ci stiamo coordinando con altre iniziative per accumulare i dati disponibili al momento attraverso altre opzioni per il tracciamento dei sintomi. </p>
+    
+    <h3 class="faq__question">Chi è dietro a questo progetto?</h3>
+    <p>Siamo un gruppo di accademici, ricercatori indipendenti, sviluppatori di software, biologi e medici che lavorano insieme al dipartimento per la salute del Canton Berna per fornire quello che riteniamo un servizio essenziale per la comunità. <br />
+        <ul>
+        <li>ETH Zürich: Gruppo di informatica biomedica, Dipartimento di scienze computazionali <a href="https://bmi.inf.ethz.ch/">https://bmi.inf.ethz.ch/</a> </li>
+        <li>Milliways: Studiamo soluzioni pratiche per qualsiasi problema di informatica. </li>
+        <li>Nine: garantiamo che nessuno debba preoccuparsi della scalabilità del backend grazie a un cluster Kubernetes </li>
+        <li>Astina: fornitore di soluzioni software backend </li>
+        <li>Esri: pionieri nella visualizzazione con il software Geographic Information System per aiutarti a vedere ciò che gli altri non possono. </li>
+        <li>Cantone di Berna: Dr. med. Jan von Overbeck, medical liaison e specialista in malattie infettive </li>
+        </ul>
+
+    </p>
+  
+    <h3 class="faq__question">Ci sono medici coinvolti in questa iniziativa? Questa iniziativa è supportata scientificamente?</h3>
+    <p>Il questionario è stato sviluppato in stretta collaborazione e col continuo contributo da parte di medici specializzati nei campi rilevanti (come l’epidemiologia, la terapia intensiva e l’infettivologia), insieme ai principali studiosi di epidemiologia, e a alle autorità del Canton Berna. Ringraziamo in particolare: Dr. med. Jan von Overbeck, Dr. med. Tobias Merz, Dr. med. Martin Faltys, Dr. Christian Althaus, Dr. Marcel Salathé, e i tanti altri che ci hanno supportato.</p>
+  
+    <h3 class="faq__question">Perché riportare solo i sintomi? Alcuni sintomi possono anche essere causati da influenza, raffreddore, eccetera.</h3>
+    <p>Questo questionario non ha lo scopo di diagnosticare COVID-19, e parteciparvi non preclude l’accesso a un test diagnostico, se necessario. Il nostro obiettivo è di valutare il numero di persone sintomatiche, e la distribuzione dei sintomi che studi precedenti (come <a href="https://www.medrxiv.org/content/10.1101/2020.03.19.20038844v2">questo</a>) hanno riscontrato in pazienti risultati positivi a COVID-19. Ci auguriamo che questo aiuti i cittadini e gli esperti a capire dove COVID-19 sia maggiormente presente, e che aiuti a predire dove nuovi casi si possano verificare. </p>
+  
+    <h3 class="faq__question">Dove vengono archiviate le informazioni personali? Le mie informazioni personali sono al sicuro?</h3>
+    <p>Tutte le informazioni personali vengono raccolte in modo anonimo e archiviate sul territorio svizzero. Abbiamo preso le misure necessarie per prevenire l’accesso incontrollato di dati non ancora analizzati. In accordo con la nostra autorizzazione etica, le informazioni verranno rese pubbliche esclusivamente in modo aggregato, senza la possibilità di ottenere informazioni sugli individui. Non richiediamo mai il nome o altre tipi di informazioni personali. Tutte le trasmissioni di dati sono criptate.</p>
+  
+    <h3 class="faq__question">Che cosa fate con questi dati?</h3>
+    <p>A breve termine, i dati saranno resi disponibili agli epidemiologi e alle autorità per meglio valutare le dinamiche di trasmissione di COVID-19 in Svizzera, e saranno usati per creare immagini informative per il pubblico, per esempio, vedi la <a href="https://www.covidtracker.ch/it/map.html">nostra mappa </a>. Mentre i dati registrati non possono essere usati per diagnosi individuali, la combinazione dei dati misurati in determinate aree geografiche e nel tempo rivelerà l’emergenza di nuovi focolai sintomatici e consentirà una rapida risposta. A lungo termine, l’insieme dei dati registrati rappresenterà un’importante risorsa per la ricerca che studia come malattie tipo COVID-19 si diffondano, e aiuterà a capire come le misure di controllo abbiano funzionato. </p>
+  
+    <h3 class="faq__question">I dati possono essere influenzati, per esempio dal fatto che un maggior numero di persone che vivono in città o aree densamente popolate parteciperà al questionario?</h3>
+    <p>Sì, questa è una possibilità tipica di questo tipo di questionari. Tuttavia molti di questi errori possono essere corretti se si raggiunge un livello di partecipazione molto elevato e diffuso, e con molti partecipanti i risultati possono essere altamente accurati. Per esempio la distribuzione geografica può essere corretta dividendo il numero di casi sospetti per il numero di risposte totali ottenute nella zona interessata, rendendo la risultante percentuale di sintomi per codice postale più significativa quando viene inserita nel contesto di altri codici postali o regioni del paese.</p>
+  
   </section>
 </div>
