--- a/source/localizable/faq.en.html.erb
+++ b/source/localizable/faq.en.html.erb
@@ -3,18 +3,54 @@
 <div class="container">
   <section class="subpage">
     <h2>FAQ</h2>
+    <h3 class="faq__question">Why did you make this survey, what does this help?</h3>
+    <p>As the COVID-19 pandemic has spread across the world, it has become apparent that testing is essential for slowing community spread, as has been seen in South Korea and Vò, Italy. However, non-targeted longitudinal testing of a large population is currently infeasible. At the moment, in Switzerland, diagnostic testing is limited to only severe cases. We would like to supplement traditional diagnostic testing with a short and anonymous survey. This survey will allow us to longitudinally track the spread of symptomatic persons across the entire country and possibly hint as to how many symptomatic people currently exist, and where there is likely to be a large increase or local clustering of cases. We plan to release summary statistics to educate the public and give clear motivation to practice physical distancing, and to inform the Canton of Bern and other interested governmental entities on the symptom dynamics in their communities. </p>
+    
+    <h3 class="faq__question">What is the aim of the campaign?</h3>
+    <p>The aim of the COVID-19 tracker is to collect as much data, as quickly, and for as many days as possible, from a sample of the Swiss population, no matter whether they are sick or not. Among other things, this data is intended to provide a more detailed picture of the corona situation in different parts of our country (see previous question).</p>
+    
+    <h3 class="faq__question">Why do I need to fill the survey every day or at least frequently?</h3>
+    <p>To understand how symptoms evolve in a specific area, it is important to see how individual respondents change over time. Filling the survey once is an important data point, but aggregating data points across time is more valuable to identify changes in your area code and your city. </p>
+    
+    <h3 class="faq__question">Should I answer the survey even if I have no symptoms?</h3>
+    <p>Yes! We are interested in the changes in people's health, so, knowing that you felt well yesterday but you have a fever today, is important information. Just select "No symptoms" and continue to do so, unless the situation changes.</p>
+
+   
+    <h3 class="faq__question">I've been filling other COVID-19 surveys, or using similar apps. Should I also fill yours?</h3>
+    <p>Yes, please fill ours as well as the other ones if you have started to do so. Please also read the next question for details on what is being done to join efforts with other initiatives.</p>
+    
+   
+    <h3 class="faq__question">Why are there many options for symptoms tracking?</h3>
+    <p>It is not unusual in a time of high activity and urgency that several projects start in parallel. Our multidisciplinary team has worked diligently for several weeks to make sure that our survey is informative for both physicians and epidemiologists and fulfills the high ethical and legal standards that have to be met to safely and securely collect health-related data of the Swiss population. We have secured collaboration and support from the Canton of Bern and ETHZ, and we are coordinating with the other efforts to consolidate into a joint data stream across the currently available symptom tracking options. </p>
+    
     <h3 class="faq__question">Who is behind this project?</h3>
-    <p>The COVID-19 tracker was created by several independent researchers and software developers in collaboration with the health department of the Canton of Bern.</p>
-    <h3 class="faq__question">What is the goal of the campaign?</h3>
-    <p>The aim of the COVID-19 tracker is to collect as much data as possible as quickly as possible from both healthy and infected people in Switzerland. Among other things, this data is intended to provide a more detailed picture of the corona situation in different parts of our country.</p>
-    <p> <%= link_to t(:aboutTheStudy), '/study_info.html', target: "_blank" %> </p>
-    <h3 class="faq__question">How does data collection help to fight the corona crisis?</h3>
-    <p>Information about the corona situation in Switzerland is difficult to coordinate and thus it is difficult to get a bigger picture of the situation. Comprehensive tests covering the whole country are not an option. Any additional information can therefore help to stop the virus from spreading.</p>
-    <h3 class="faq__question">Is the campaign scientifically supported?</h3>
-    <p>The campaign was developed in collaboration with the health department of the Canton of Bern. This confirms the urgent need for as much information as possible from the population to combat the epidemic. Scientific studies (by Dr. Jan von Overbeck, among others) support a procedure that is now being implemented with the COVID-19 tracker.</p>
-    <h3 class="faq__question">What happens to my data?</h3>
-    <p>The data collected using the COVID-19 tracker does not allow any conclusions to be drawn about individuals. They contain the postcode, age, gender and some other information, but neither names nor other personal data. All data is transmitted encrypted</p>
-    <h3 class="faq__question">Will the data not be biased if, for example, more people fill out the questionnaire in areas such as cities or other densely populated areas?</h3>
-    <p>This geographic bias can be corrected by dividing the number of cases by the total submissions. The resulting percentage or per zip code is more meaningful.</p>
+    <p>We are a group of academics, independent researchers, software developers, biologists and medical doctors working in conjunction with the health department of the Canton of Bern to provide what we believe is a needed service for our community <br />
+        <ul>
+        <li>ETH Zürich: Biomedical Informatics group, Department of Computer Science <a href="https://bmi.inf.ethz.ch/">https://bmi.inf.ethz.ch/</a> </li>
+        <li>Milliways: We find pragmatic solutions for almost every IT problem. </li>
+        <li>Nine: We ensure nobody has to worry about scalability of the backend thanks to a Kubernetes Cluster </li>
+        <li>Astina: Supplier of backend and data processing software solutions from Zurich </li>
+        <li>Esri: We pioneer problem solving and visualisation with Geographic Information System software to help you see what others can’t.</li>
+        <li>Canton of Bern: Dr. med. Jan von Overbeck, medical liaison and infectious diseases specialist  </li>
+        </ul>
+
+    </p>
+  
+    <h3 class="faq__question">Are medical doctors involved? Is this effort scientifically supported?</h3>
+    <p>The survey has been developed in close collaboration and with continuous feedback from physicians of relevant specialties ( such as epidemiology, intensive care, and infectology), as well as leading epidemiological scientists, and Canton of Bern authorities. We are especially grateful to Dr. med. Jan von Overbeck, Dr. med. Tobias Merz, Dr. med. Martin Faltys, Dr. Christian Althaus, Dr. Marcel Salathé, and many others out of a great team of supporters.</p>
+  
+    <h3 class="faq__question">Why only symptoms? Some symptoms can also relate to flu, cold...etc.</h3>
+    <p>This survey is not intended to be a COVID-19 diagnostic tool, and taking part in it does not preclude a diagnostic test if needed. Our goal is to estimate the amount of symptomatic people, and the prevalence of symptoms previous studies (such as <a href="https://www.medrxiv.org/content/10.1101/2020.03.19.20038844v2">this one</a>) have found to be correlated with reported positive COVID-19 tests. We hope this gives the public and experts insight into where COVID-19 is probably currently occurring the most, and can help predict where new clusters may develop.</p>
+  
+    <h3 class="faq__question">Where is the data stored? Is my data safe?</h3>
+    <p>All data is collected anonymously and is stored securely within Switzerland. We have taken the appropriate measures to prevent public access to the raw data. In agreement with our ethics clearance, data will only be made public in aggregated form, not allowing the singling out of an individual person.We do not collect names nor other forms of personal data. All data transmission is encrypted.</p>
+  
+    <h3 class="faq__question">What do you do with the data?</h3>
+    <p>In the short term, the data will be available to epidemiology researchers and the authorities to better estimate the dynamics of COVID-19 spread within Switzerland, and will be used to provide informative visualizations for the general public, see <a href="https://www.covidtracker.ch/it/map.html">our map</a>, for example. While the data can not be used to diagnose an individual, the data points aggregated over local areas and time, will show hotspots of emerging symptoms and allow for a timely reaction. In the long term, the full data set will be a valuable resource for research to better understand how diseases such as COVID-19 spread and inform on how well measures of mitigation worked.
+    </p>
+  
+    <h3 class="faq__question">Could the data be biased? if, for example, more people fill out the questionnaire in areas such as cities or other densely populated areas?</h3>
+    <p>Yes, this type of data collection has inherent biases and caveats. But many biases can be corrected if widespread participation is achieved, and if many people participate, observations can be highly accurate. For example, the geographic bias can be corrected by dividing the number of suspected cases by the total submissions in the area of interest, making the resulting percentage of symptoms per zip code more meaningful when put in the context of other zip codes or regions in the country.</p>
+  
   </section>
 </div>
